<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsl.android.incomemanagement.HelpDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="'' Your future is in your hand ''"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/help" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/dailyIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/dailyshopping" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/dailyIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="DAILY\nNEEDS"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/dailyIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="(30%)"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_orange_light"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/daily"
                android:textAlignment="center"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_orange_dark"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/socialIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/sociallife" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/socialIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="SOCIAL\nLIFE"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/socialIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="(20%)"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_orange_dark"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/social"
                android:textAlignment="center"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_red_light"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/learnIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/learnstudy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/learnIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="LEARN and\nSTUDY"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/learnIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="(15%)"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_red_light"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/study"
                android:textAlignment="center"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_purple"

                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/leisureIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/leisuretravel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/learnIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="LEISURE and\nTRAVEL"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/learnIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="(10%)"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_purple"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/leisure"
                android:textAlignment="center"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_bright"

                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/investIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/investment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/learnIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="INVESTMENT\nand SAVINGS"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/learnIcon2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="(25%)"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_blue_bright"
                android:fontFamily="sans-serif-condensed"
                android:padding="16dp"
                android:text="@string/invest"
                android:textAlignment="center"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
